--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ var fid = new Array();
                   console.log('Error');
                   }
              });
+  console.log(fid);
   flist=fid.toString();
   console.log(flist);
   FB.ui({method: 'apprequests',
