--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function appreq(){
  }
   function callbackinv(response) {
   	if(response.error_code==4205){
-  		alert('Please invite your friends!')
+  		alert('Please invite your friends!');
   		inviteall();
   	}
    console.log(response);
