--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@ function appreq(){
  }
 
  function callback(response) {
-   console.log(response);
- }
-  function callbackinv(response) {
-  	if(response.error_code==4205){
+ 	 	if(response.error_code==4205){
   		alert('Please invite your friends!');
   		inviteall();
   	}
@@ -155,7 +152,7 @@ function inviteall() {var frid = new Array();
  FB.ui({method: 'apprequests',
       message: 'I challenge you to Beat Me on Best Clicker',
       to: frid
-    },callbackinv;
+    },callback;
       console.log('Invite Success!');
              });
  console.log(frid);
