--- a/index.html
+++ b/index.html
@@ -34,56 +34,12 @@ color:white;
 var timeInSecs;
 var ticker;
 var flag=0;
-var div
- function renderMFS() {
- // First get the list of friends for this user with the Graph API
- FB.api('/me/friends', function(response) {
-   var container = document.getElementById('mfs');
-   var mfsForm = document.createElement('form');
-   mfsForm.id = 'mfsForm';
-
-   // Iterate through the array of friends object and create a checkbox for each one.
-   for(var i = 0; i < Math.min(response.data.length, 10); i++) {
-     var friendItem = document.createElement('div');
-     friendItem.id = 'friend_' + response.data[i].id;
-     friendItem.innerHTML = '<input type="checkbox" name="friends" value="'
-       + response.data[i].id
-       + '" checked />' + response.data[i].name;
-       mfsForm.appendChild(friendItem);
-     }
-     container.appendChild(mfsForm);
-
-     // Create a button to send the Request(s)
-     var sendButton = document.createElement('input');
-     sendButton.type = 'button';
-     sendButton.value = 'Send Request';
-     sendButton.onclick = appreq;
-     mfsForm.appendChild(sendButton);
-   });
- }        
-function appreq(){
-   // Get the list of selected friends
-   var sendUIDs = '';
-   var mfsForm = document.getElementById('mfsForm');
-     for(var i = 0; i < mfsForm.friends.length; i++) {
-       if(mfsForm.friends[i].checked) {
-         sendUIDs += mfsForm.friends[i].value + ',';
-       }
-     }
-
-   // Use FB.ui to send the Request(s)
-   FB.ui({method: 'apprequests',
-     to: sendUIDs,
-     title: 'Beat Me on Best Clicker',
-     message: 'Check out this Awesome App!',
-   }, callback);
- }
-
- function callback(response) {
- 	 	if(response.error_code==4205){
-  		alert('Please invite your friends!');
-  		inviteall();
-  	}
+var div;
+function callback(response) {
+ if(response.error_code==4205){
+  	alert('Please invite your friends!');
+  	inviteall();
+  }
    console.log(response);
  }
 
