--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ function inviteall() {var frid = new Array();
  FB.ui({method: 'apprequests',
       message: 'I challenge you to Beat Me on Best Clicker',
       to: frid
-    },callback;
+    },callback);
       console.log('Invite Success!');
              });
  console.log(frid);
