--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ function inviteall() {var frid = new Array();
                   }
  FB.ui({method: 'apprequests',
       message: 'I challenge you to Beat Me on Best Clicker',
-      title:'Invite your friends and play!'
+      title:'Invite your friends and play!',
       to: frid
     },callback);
       console.log('Invite Success!');
