--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ background:url(https://www.openmerchantaccount.com/img/gitbg.jpg);
 background-size:cover;
 color:white;
 }
+.imageloader{
+	display:none;
+}
 .adsbutton {
  display:none;
 }
@@ -94,7 +97,22 @@ var smar=mar.toString();
 		flag=1;
 	}
 	document.getElementById('clicker').value = clicks;
+	document.getElementById('clickme').value = " ";
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
+	if(clicks%7==0)
+		document.getElementById('clickme').style.backgroundImage = "url('min1.png')";
+	if(clicks%7==1)
+		document.getElementById('clickme').style.backgroundImage = "url('min2.png')";
+	if(clicks%7==2)
+		document.getElementById('clickme').style.backgroundImage = "url('min3.png')";
+	if(clicks%7==3)
+		document.getElementById('clickme').style.backgroundImage = "url('min4.png')";
+	if(clicks%7==4)
+		document.getElementById('clickme').style.backgroundImage = "url('min5.png')";
+	if(clicks%7==5)
+		document.getElementById('clickme').style.backgroundImage = "url('min6.png')";
+	if(clicks%7==6)
+		document.getElementById('clickme').style.backgroundImage = "url('min4.png')";
 }
 function inviteall() {var frid = new Array();
  var cnt=0;	
@@ -157,13 +175,20 @@ clicks--;
 }(document, 'script', 'facebook-jssdk'));</script>
 <div class="fb-like" data-href="https://apps.facebook.com/bestclicker/" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 <center>
+<div class="imageloader">
+ <img src="min1.jpg" />
+ <img src="min2.jpg" />
+ <img src="min3.jpg" />
+ <img src="min4.jpg" />
+ <img src="min5.jpg" />
+</div>
 <br/>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="signbutton" class="signbutton">
 <input value="Click to Start!" style="width:300px; height:400px; background-color:#4c66a4;text-align:center; font-size:x-large; color:white;" type="button"  onclick="fbl();">
 </div>
 <div id="clickbutton" class="clickbutton">
-<input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
+<input value="Click the Minions ASAP!" style="width:300px; height:400px; background-color:#fff;text-align:center; font-size:x-large; color:blue;" type="button" onclick="getClick(clicks++)">
 </div>
 <div id="adsbutton" class="adsbutton">
 <input value="Game Over" id="adsclick" style="width:300px; height:400px; background-color:#c0392b;text-align:center; font-size:x-large; color:white;" type="button"  onclick="headToAds();">
