--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ var smar=mar.toString();
 		flag=1;
 	}
 	document.getElementById('clicker').value = clicks;
-	document.getElementById('clickme').value = " ";
+	document.getElementById('clickme').value = ".";
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
 	if(clicks%7==0)
 		document.getElementById('clickme').style.backgroundImage = "url('min1.png')";
