--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ clicks--;
 <input value="Click to Start!" style="width:300px; height:400px; background-color:#4c66a4;text-align:center; font-size:x-large; color:white;" type="button"  onclick="fbl();">
 </div>
 <div id="clickbutton" class="clickbutton">
-<input value="Click the Minions ASAP!" style="width:300px; height:400px; background-color:#fff;text-align:center; font-size:x-large; color:blue;" type="button" onclick="getClick(clicks++)">
+<input id="clickme" value="Click the Minions ASAP!" style="width:300px; height:400px; background-color:#fff;text-align:center; font-size:x-large; color:blue;" type="button" onclick="getClick(clicks++)">
 </div>
 <div id="adsbutton" class="adsbutton">
 <input value="Game Over" id="adsclick" style="width:300px; height:400px; background-color:#c0392b;text-align:center; font-size:x-large; color:white;" type="button"  onclick="headToAds();">
