--- a/index.html
+++ b/index.html
@@ -99,20 +99,18 @@ var smar=mar.toString();
 	document.getElementById('clicker').value = clicks;
 	document.getElementById('clickme').value = ".";
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
-	if(clicks%7==0)
-		document.getElementById('clickme').style.backgroundImage = "url('min1.png')";
-	if(clicks%7==1)
-		document.getElementById('clickme').style.backgroundImage = "url('min2.png')";
-	if(clicks%7==2)
-		document.getElementById('clickme').style.backgroundImage = "url('min3.png')";
-	if(clicks%7==3)
-		document.getElementById('clickme').style.backgroundImage = "url('min4.png')";
-	if(clicks%7==4)
-		document.getElementById('clickme').style.backgroundImage = "url('min5.png')";
-	if(clicks%7==5)
-		document.getElementById('clickme').style.backgroundImage = "url('min6.png')";
-	if(clicks%7==6)
-		document.getElementById('clickme').style.backgroundImage = "url('min4.png')";
+	if(clicks%6==0)
+		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min1.png')";
+	if(clicks%6==1)
+		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min2.png')";
+	if(clicks%6==2)
+		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min3.png')";
+	if(clicks%6==3)
+		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min4.png')";
+	if(clicks%6==4)
+		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min5.png')";
+	if(clicks%6==5)
+		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min6.png')";
 }
 function inviteall() {var frid = new Array();
  var cnt=0;	
@@ -176,11 +174,12 @@ clicks--;
 <div class="fb-like" data-href="https://apps.facebook.com/bestclicker/" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 <center>
 <div class="imageloader">
- <img src="min1.jpg" />
- <img src="min2.jpg" />
- <img src="min3.jpg" />
- <img src="min4.jpg" />
- <img src="min5.jpg" />
+ <img src="https://www.openmerchantaccount.com/img/min1.png" />
+ <img src="https://www.openmerchantaccount.com/img/min2.png" />
+ <img src="https://www.openmerchantaccount.com/img/min3.png" />
+ <img src="https://www.openmerchantaccount.com/img/min4.png" />
+ <img src="https://www.openmerchantaccount.com/img/min5.png" />
+ <img src="https://www.openmerchantaccount.com/img/min6.png" />
 </div>
 <br/>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
