--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@ function fbl() {
    if (response.authResponse) {
      console.log('Welcome!  Fetching your information.... ');
      FB.api('/me', function(response) {
+     		inviteall();
 		div = document.getElementById('signbutton').style.display = 'none';
 		div = document.getElementById('clickbutton').style.display = 'block';
 		div = document.getElementById('menu').style.display = 'block';
-		inviteall();
+		
      });
    } else {
      console.log('User cancelled login or did not fully authorize.');
@@ -187,7 +188,7 @@ clicks--;
 <input value="Click to Start!" style="width:300px; height:400px; background-color:#4c66a4;text-align:center; font-size:x-large; color:white;" type="button"  onclick="fbl();">
 </div>
 <div id="clickbutton" class="clickbutton">
-<input id="clickme" value="Click Me" style="width:300px; height:400px; background-color:rgba(182, 255, 168, 0.7);text-align:center; font-size:x-large; color:#016934;" type="button" onclick="getClick(clicks++)">
+<input id="clickme" value="Click Here To Start!" style="width:300px; height:400px; background-color:rgba(182, 255, 168, 0.7);text-align:center; font-size:x-large; color:#016934;" type="button" onclick="getClick(clicks++)">
 </div>
 <div id="adsbutton" class="adsbutton">
 <input value="Game Over" id="adsclick" style="width:300px; height:400px; background-color:#c0392b;text-align:center; font-size:x-large; color:white;" type="button"  onclick="headToAds();">
