--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ function resetall() {
    div = document.getElementById('clickbutton').style.display = 'block';
    div = document.getElementById('adsbutton').style.display = 'none';
    div = document.getElementById('countdown').innerHTML = '10';
+   document.getElementById('clickme').value = "Click to start!";
+   document.getElementById('clickbutton').style.marginLeft= '0px';
 }
 function submitscore() {
 clicks--;
