--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ document.getElementById("countdown").innerHTML = secs;
 var clicks = 0;
 function getClick(clicks) {
 var mar;
-mar=Math.sin(clicks*120);
+mar=Math.sin((clicks*100)+270);
 mar=mar*400;
 var smar=mar.toString();
 	if(flag==0){
