--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ var smar=mar.toString();
 		flag=1;
 	}
 	if(clicks>10){
-		ocument.getElementById('clickme').value = "10 PLUS BOOSTER!";
+		document.getElementById('clickme').value = "10 PLUS BOOSTER!";
 		clicks = clicks +  10;
 	}
 	document.getElementById('clicker').value = clicks;
