--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ var smar=mar.toString();
 	document.getElementById('clicker').value = clicks;
 	document.getElementById('clickme').value = ".";
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
-	if(clicks>10){
+	if(clicks==10){
 		document.getElementById('clickme').value = "10 PLUS BOOSTER!";
 		clicks = clicks +  10;
 	}
