--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ var smar=mar.toString();
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
 	if(clicks==10){
 		document.getElementById('clickme').value = "10 PLUS BOOSTER!";
-		clicks = clicks +  10;
+		clicks+=10;
 	}
 	if(clicks%6==0)
 		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min1.png')";
