--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function fbl() {
    } else {
      console.log('User cancelled login or did not fully authorize.');
    }
- },{scope: 'publish_actions','user_games_activity','friends_games_activity'});
+ },{scope: 'publish_actions,user_games_activity,friends_games_activity'});
  }
  
 function startTimer(secs){
