--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@ var smar=mar.toString();
 	document.getElementById('clickme').value = ".";
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
 	if(click>=10){
-		document.getElementById('clickme').value = "10+ BOOST!";
+		clicks+=10;
+	}
+	if(click==10){
+	document.getElementById('clickme').value = "10+ BOOST!";
 		clicks+=10;
 	}
 	if(click%6==0)
