--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ var smar=mar.toString();
 		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min2.png')";
 	if(click%6==2)
 		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min3.png')";
-	if(clicks%6==3)
+	if(click%6==3)
 		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min4.png')";
 	if(click%6==4)
 		document.getElementById('clickme').style.backgroundImage = "url('https://www.openmerchantaccount.com/img/min5.png')";
