--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ var timeInSecs;
 var ticker;
 var flag=0;
 var div;
+  
 function callback(response) {
   if (response && !response.error) {
         /* handle the result */
@@ -55,7 +56,17 @@ function callback(response) {
   }
    console.log(response);
  }
-
+var scnt=1;
+FB.api('/259826257528588/scores?limit=10', function(response) {
+              if(response.data) {
+               response.data.forEach(function(friend) {
+                   div = document.getElementById('rank'+scnt).innerHTML= '<h1>'+friend.user.name+'</h1><br/> Score :'+friend.score+'<hr/>';
+                   scnt++;
+               });
+              }else {
+                  console.log('Error');
+                  },callback);
+                  
 function fbl() {
  FB.login(function(response) {
    if (response.authResponse) {
@@ -224,6 +235,16 @@ FB.api('/me/scores', 'post', {
 <br/>
 <div class="leaderboard">
 <img src="https://www.openmerchantaccount.com/img/topten.png" />
+<div id="rank1"></div>
+<div id="rank2"></div>
+<div id="rank3"></div>
+<div id="rank4"></div>
+<div id="rank5"></div>
+<div id="rank6"></div>
+<div id="rank7"></div>
+<div id="rank8"></div>
+<div id="rank9"></div>
+<div id="rank9"></div>
 </div>
 <span id="message" style="font-size:x-large;">Click Repeatedly on the Minions!<br/>You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="signbutton" class="signbutton">
