--- a/index.html
+++ b/index.html
@@ -57,14 +57,6 @@ function callback(response) {
    console.log(response);
  }
 var scnt=1;
-FB.api('/259826257528588/scores?limit=10', function(response) {
-              if(response.data) {
-               response.data.forEach(function(friend) {
-                   div = document.getElementById('rank'+scnt).innerHTML= '<h1>'+friend.user.name+'</h1><br/> Score :'+friend.score+'<hr/>';
-                   scnt++; });
-              }else {
-                  console.log('Error');
-                  }});
                   
 function fbl() {
  FB.login(function(response) {
@@ -220,7 +212,17 @@ FB.api('/me/scores', 'post', {
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=259826257528588";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));
+	
+FB.api('/259826257528588/scores?limit=10', function(response) {
+              if(response.data) {
+               response.data.forEach(function(friend) {
+                   div = document.getElementById('rank'+scnt).innerHTML= '<h1>'+friend.user.name+'</h1><br/> Score :'+friend.score+'<hr/>';
+                   scnt++; });
+              }else {
+                  console.log('Error');
+                  }});
+</script>
 <div class="fb-like" data-href="https://apps.facebook.com/bestclicker/" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 <center>
 <div class="imageloader">
