--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ color:white;
 }
 .leaderboard {
 position: absolute;
- height : 500px;
+ height : 60px;
  width : 250px;
  float : left;
  z-index:5;
@@ -57,7 +57,18 @@ function callback(response) {
    console.log(response);
  }
 var scnt=1;
-                  
+
+function showRank{
+document.getElementById('leaderboard').style.height = '500px';	
+FB.api('/259826257528588/scores?limit=10', function(response) {
+              if(response.data) {
+               response.data.forEach(function(friend) {
+                   div = document.getElementById('rank'+scnt).innerHTML= '<h1>'+friend.user.name+'</h1><br/> Score :'+friend.score+'<hr/>';
+                   scnt++; });
+              }else {
+                  console.log('Error');
+                  }});
+}                 
 function fbl() {
  FB.login(function(response) {
    if (response.authResponse) {
@@ -213,15 +224,6 @@ FB.api('/me/scores', 'post', {
   js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=259826257528588";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
-	
-FB.api('/259826257528588/scores?limit=10', function(response) {
-              if(response.data) {
-               response.data.forEach(function(friend) {
-                   div = document.getElementById('rank'+scnt).innerHTML= '<h1>'+friend.user.name+'</h1><br/> Score :'+friend.score+'<hr/>';
-                   scnt++; });
-              }else {
-                  console.log('Error');
-                  }});
 </script>
 <div class="fb-like" data-href="https://apps.facebook.com/bestclicker/" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 <center>
@@ -235,7 +237,7 @@ FB.api('/259826257528588/scores?limit=10', function(response) {
 </div>
 <br/>
 <div class="leaderboard">
-<img src="https://www.openmerchantaccount.com/img/topten.png" />
+<input type="button" onclick="showRank();" style="background-image:url('https://www.openmerchantaccount.com/img/topten.png');" />
 <div id="rank1"></div>
 <div id="rank2"></div>
 <div id="rank3"></div>
