--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ FB.api('/me/scores', 'post', {
  <img src="https://www.openmerchantaccount.com/img/min6.png" />
 </div>
 <br/>
-<div class="leaderboard">
+<div class="leaderboard" id="leaderboard">
 <input type="button" onclick="showRank();" style="width:250px; height:60px; background-image:url('https://www.openmerchantaccount.com/img/topten.png');" />
 <div id="rank1"></div>
 <div id="rank2"></div>
