--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ position: absolute;
  z-index:5;
  background-color:rgba(0, 255, 225, 0.75);
  color:#016934;
- 
+ overflow: scroll;
+}
+.eachrank {
+ width:249;
 }
 .adsbutton {
  display:none;
@@ -259,16 +262,16 @@ FB.api('/me/scores', 'post', {
 <br/>
 <div class="leaderboard" id="leaderboard">
 <input type="button" onclick="showRank();" style=" background-color:rgba(182, 255, 168, 0.7); width:250px; height:60px; background-image:url('https://www.openmerchantaccount.com/img/topten.png');" />
-<div id="rank1"></div>
-<div id="rank2"></div>
-<div id="rank3"></div>
-<div id="rank4"></div>
-<div id="rank5"></div>
-<div id="rank6"></div>
-<div id="rank7"></div>
-<div id="rank8"></div>
-<div id="rank9"></div>
-<div id="rank10"></div>
+<div id="rank1" class="eachrank"></div>
+<div id="rank2" class="eachrank"></div>
+<div id="rank3" class="eachrank"></div>
+<div id="rank4" class="eachrank"></div>
+<div id="rank5" class="eachrank"></div>
+<div id="rank6" class="eachrank"></div>
+<div id="rank7" class="eachrank"></div>
+<div id="rank8" class="eachrank"></div>
+<div id="rank9" class="eachrank"></div>
+<div id="rank10" class="eachrank"></div>
 </div>
 <span id="message" style="font-size:x-large;">Click Repeatedly on the Minions!<br/>You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="signbutton" class="signbutton">
