--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ position: absolute;
  z-index:5;
  background-color:rgba(0, 255, 225, 0.75);
  color:#016934;
- overflow: scroll;
+ overflow-x:hidden;
+ overflow-y: scroll;
 }
 .eachrank {
  width:249;
