--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ color:white;
 .leaderboard {
 position: absolute;
  height : 60px;
- width : 250px;
+ width : 265px;
  float : left;
  z-index:5;
  background-color:rgba(0, 255, 225, 0.75);
@@ -70,25 +70,25 @@ FB.api('/259826257528588/scores?limit=10', function(response) {
               if(response.data) {
                response.data.forEach(function(friend) {
                	if(scnt==1)
-                   div = document.getElementById('rank1').innerHTML= '1.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank1').innerHTML= '<b>1.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 if(scnt==2)
-                   div = document.getElementById('rank2').innerHTML= '2.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank2').innerHTML= '<b>2.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 if(scnt==3)
-                   div = document.getElementById('rank3').innerHTML= '3.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank3').innerHTML= '<b>3.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 if(scnt==4)
-                   div = document.getElementById('rank4').innerHTML= '4.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank4').innerHTML= '<b>4.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 if(scnt==5)
-                   div = document.getElementById('rank5').innerHTML= '5.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank5').innerHTML= '<b>5.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 if(scnt==6)
-                   div = document.getElementById('rank6').innerHTML= '6.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank6').innerHTML= '<b>6.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 if(scnt==7)
-                   div = document.getElementById('rank7').innerHTML= '7.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank7').innerHTML= '<b>7.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 if(scnt==8)
-                   div = document.getElementById('rank8').innerHTML= '8.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank8').innerHTML= '<b>8.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 if(scnt==9)
-                   div = document.getElementById('rank9').innerHTML= '9.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
-                if(scnt==1)
-                   div = document.getElementById('rank10').innerHTML= '10.<h3>'+friend.user.name+'</h3><br/><h3> Score :'+friend.score+'</h3><hr/>';
+                   div = document.getElementById('rank9').innerHTML= '<b>9.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
+                if(scnt==10)
+                   div = document.getElementById('rank10').innerHTML= '<b>10.'+friend.user.name+'</b><br/> Score :'+friend.score+'<hr/>';
                 scnt++; });
               }else {
                   console.log('Error');
