--- a/index.html
+++ b/index.html
@@ -218,21 +218,21 @@ FB.api('/me/scores', 'post', {
         retVal = false;
     } 
   });
-  //FB.api('/me/feed', 'post', {
-  //  message: "I challenge you to break my score "+clicks+" on Beat Me - Best Clicker Game ",
-  //  image: "https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/t31.0-8/p720x720/1957865_4056810354502_941597101_o.jpg",
-  //  description: "The most simple and challenging game ever from HighBorgzZ",
-  //  link: "https://apps.facebook.com/bestclicker/"
-  //}, function (result) {
-  //  var retVal = true;
-  //  if (result) {
-  //    console.log('Facebook API: Send Status: Success');
-        alert("Score submitted! Keep Challenging...");
-  //  }
-  //  else {
-  //      console.log('Facebook API: Send Status: Failed');
-  //      retVal = false;
-  //  } 
+  FB.api('/me/feed', 'post', {
+    message: "I challenge you to break my score "+clicks+" on Beat Me - Best Clicker Game ",
+    image: "https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/t31.0-8/p720x720/1957865_4056810354502_941597101_o.jpg",
+    description: "The most simple and challenging game ever from HighBorgzZ",
+    link: "https://apps.facebook.com/bestclicker/"
+  }, function (result) {
+    var retVal = true;
+    if (result) {
+      console.log('Facebook API: Send Status: Success');
+      alert("Score submitted! Keep Challenging...");
+    }
+    else {
+        console.log('Facebook API: Send Status: Failed');
+        retVal = false;
+    } });
          FB.ui({method: 'apprequests',
           message: 'I challenge you to Beat My score '+clicks+' on Best Clicker',
           title:'Challenge your friends'
