--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ color:white;
  display:none;
  position: absolute;
  height :650px;
- width : 265px;
+ width : 200px;
  float : left;
  z-index:5;
  background-color:rgba(0, 255, 225, 0.75);
@@ -31,7 +31,7 @@ color:white;
 .eachrank {
  padding-left:5px;
  text-align:left;
- width:249;
+ width:199;
 }
 .adsbutton {
  display:none;
@@ -264,7 +264,7 @@ FB.api('/me/scores', 'post', {
 </div>
 <br/>
 <div class="leaderboard" id="leaderboard">
-<img src="https://www.openmerchantaccount.com/img/topten.png" /><hr/>
+<img src="https://www.openmerchantaccount.com/img/topten.png" width="200px"/><hr/>
 <div id="rank1" class="eachrank"></div>
 <div id="rank2" class="eachrank"></div>
 <div id="rank3" class="eachrank"></div>
